UI: Fix dialog content overflowing issue
(integrated from master branch change 9.2.1-1217-g1069e7a by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/chromeless.less
+++ b/src/chrome/komodo/skin/global/chromeless.less
@@ -22,6 +22,15 @@ dialog:root[hidechrome="true"]:not(.embedded)
         padding: 6px;
     }
     
+    &,
+    .window-wrapper,
+    .dialog-content-box,
+    .dialog-button-box,
+    .resizer-box,
+    {
+        overflow: -moz-hidden-unscrollable;
+    }
+    
     & > #titlebar
     {
         padding-bottom: 5px;
